# openmcu-ng

./: Makefile.am  configure.ac
openmcu-ru/: Makefile.in  mcu_rtp_secure.cxx  mcu_rtp_secure.h  utils_av.cxx  utils_av.h
openmcu-ru/files/scripts/: omcu-launcher.sh  web_stream_start
plugins/G722/: Makefile  Makefile.in
plugins/G722.1/: Makefile  Makefile.in
plugins/G722.2/: Makefile  Makefile.in
plugins/G7231/: Makefile  Makefile.in  g7231codec.cxx
plugins/G726/: Makefile  Makefile.in
plugins/G729/: Makefile  Makefile.in
plugins/H.261-vic/: Makefile  Makefile.in
plugins/H.263-1998.3/: Makefile  Makefile.in  h263-1998.cxx
plugins/H.264_123/: Makefile  Makefile.in  h264-x264.cxx
plugins/H.264_nvenc/: Makefile  Makefile.in  h264-x264.cxx
plugins/MPEG4/: Makefile  Makefile.in  mpeg4.cxx
plugins/OPUS/: Makefile  Makefile.in
plugins/SILK_B40/: Makefile  Makefile.in
plugins/Speex/: Makefile  Makefile.in
plugins/VP8-WebM/: Makefile  Makefile.in  vp8_webm.cxx
plugins/common/: ffmpeg.cxx
plugins/iLBC/: Makefile  Makefile.in
